--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,7 @@ test:
 production:
   <<: *default
   database: kebabu3_production
-  username: kebabu3
-  password: <%= ENV['KEBABU3_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
+  
